N°1616 - Fix truncated caselog entry with large HTML table or word

--- a/css/light-grey.scss
+++ b/css/light-grey.scss
@@ -1,3 +1,21 @@
+/*!
+ * Copyright (C) 2013-2019 Combodo SARL
+ *
+ * This file is part of iTop.
+ *
+ * iTop is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * iTop is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ */
+
 @import 'css-variables.scss';
 
 $hilight-color: $highlight-color;
@@ -2012,6 +2030,10 @@ span.form_validation {
 }
 .caselog_header.open {
 	background: #ddd url(../images/minus.gif) left no-repeat;
+}
+.caselog_entry,
+.caselog_entry_html {
+	overflow-x: auto;
 }
 .caselog_entry {
 	padding:3px;
